Remove javascript that hides toggle on small screens, use CSS to achieve same goal. Fix patreon logo not displaying properly on small screens

--- a/app/assets/stylesheets/_mediaQueries.scss
+++ b/app/assets/stylesheets/_mediaQueries.scss
@@ -1,4 +1,14 @@
 @import "variables";
+// Only for kofi-patreon logo
+@media (max-width: 554px){
+	.header_buttons button {
+		&.patreon {
+			padding: 2px 10px 2px 26px;
+			background: url("icons8-patreon-white.svg") 8% 50%/16px no-repeat,
+									linear-gradient($fiery-coral,$fiery-coral);
+		}
+	}
+}
 //-----------------------------------------------
 // From 350 to 600 pixels
 // ----------------------------------------------
